Fix border-radius on iPhone.

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -233,6 +233,7 @@
   margin-bottom: 22px;
   border: none;
   border-bottom: 2px solid #444444;
+  border-radius: 0;
   background-color: transparent;
   outline: none;
   font-size: 17px;
@@ -275,6 +276,8 @@
   font-size: 17px;
   line-height: 18px;
   border: 2px solid #444444;
+  border-radius: 0;
+  outline: none;
 
   &:hover {
     border-color: #62d1ba;
